Fix formatting issues in showMessage function

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@ button {
 <script>
 function showMessage() {
   const name = document.getElementById("name").value.trim();
-
-  const messages = {
+　const messages = {
   "淺川謙友": "音友を支えてくれてありがとう。これからも自分らしくな。頑張れ。",
   "熱田翼": "音友を好きになってくれてありがとう。さらなる飛躍へ。",
   "安部颯真": "最後の最後まで俺たちと一緒にいたな。みんなお前のことが大好きだ。信頼感はだれにも負けない。しっかり建て直せ。",
@@ -59,7 +58,7 @@ function showMessage() {
   "佐々木萌": "新歓期の飲み会で初めて喋った後輩。君がいるだけで音友に華がでる。同期とも後輩とも仲良く音友を楽しんでくれ。",
   "新藤大昇": "まだまだ君の知らない音友の姿がある。全部やっちゃえ。",
   "杉山浩登": "音友を好きになってくれてありがとう。あと一年、されど一年。まだなんでもできる。",
-  "鈴木敬士": "合宿の働きぶりは、伝説でした。判断力、行動力、きっとまたそれが活かされるときが来るだろう。これからの音友を頼むよ。"
+  "鈴木敬士": "合宿の働きぶりは、伝説でした。判断力、行動力、きっとまたそれが活かされるときが来るだろう。これからの音友を頼むよ。",
   "関谷瀬喜": "いつも楽しそうにライブしてて、本当に心から音友が好きなんだなって感じる。まだ好きになれる。いろんなものに出会ってけ。",
   "髙橋沙希": "絶対に人に弱みは見せない。強い人間だな。同期だけじゃなくて音友のみんなが君といて楽しい。まだ俺らも楽しみきれていないかもしれない。また会おうな。",
   "中村優歩": "卒業を見届けてくれてありがとう。４年になってもまだまだ楽しめることはいっぱいある。仲間を大切にね。",
@@ -79,7 +78,7 @@ function showMessage() {
   "山本悠流": "もっともっと、自分を出していいよ。絶対みんな認めてくれるいい奴らだ。最後の１年、１ミリも後悔残すなよ。",
   "横井怜": "いっつもニコニコ。きっと君の近くにいたら、何か面白いことが起きるんじゃねーかって期待してしまうくらい。真の音友の照明。",
   "吉田心": "音友を好きになってくれてありがとう。入部当初からすごいくらい上達しててびっくり。まだ、いける。最後の１年に全てを。",
-  "渡邊篤人": "やっぱりそのベースの音じゃないと俺の心は燃えなかった。自分を出していくのすごくいいよ。後輩にいい背中を見せてやれ。"
+  "渡邊篤人": "やっぱりそのベースの音じゃないと俺の心は燃えなかった。自分を出していくのすごくいいよ。後輩にいい背中を見せてやれ。",
   "石沢侑香": "同郷としてすごく応援してるよ。追いコンすごい楽しめた。音友生活、まだまだ楽しめる。",
   "石田智之": "ドラムのリーダーは君だ。仲間を大切に、いろんなことに挑んで、出会ってね。",
   "猪上智也": "まだ、できることはたくさんある。自分を出すことが大事だよ。いい背中を見せてくれ。",
