--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <script>
     const messages = {
 
-      "浅井隆之介":"ギターの音がいい"
-      "中澤彩":"順反り"
-     "平野雅大":"チューニングは２秒で。"
-    "宮澤日菜":"今日は会わなくていいの"
+      "浅井隆之介":"ギターの音がいい",
+      "中澤彩":"順反り",
+     "平野雅大":"チューニングは２秒で。",
+    "宮澤日菜":"今日は会わなくていいの",
       "淺川謙友": "音友を支えてくれてありがとう。これからも自分らしくな。頑張れ。",
   "熱田翼": "音友を好きになってくれてありがとう。さらなる飛躍へ。",
   "安部颯真": "最後の最後まで俺たちと一緒にいたな。みんなお前のことが大好きだ。信頼感はだれにも負けない。しっかり建て直せ。",
